# ore-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: args.rs  benchmark.rs  busses.rs  claim.rs  close.rs  config.rs  dynamic_fee.rs  main.rs  mine.rs  open.rs  rewards.rs  send_and_confirm.rs  stake.rs  upgrade.rs  utils.rs
