[package]
name = "more-cli"
version = "0.5.0"
description = "Miraland release of command line interface for the Ore program V2."
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "ore"
path = "src/main.rs"

[features]
default = []
admin = []
# gpu = ["drillx/gpu"]

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.15.0"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
# drillx = { git = "https://github.com/regolith-labs/drillx", rev = "ce0330957a2153c9191bdbcbcf4acce031ccd6bf", optional = false }
drillx = { git = "https://github.com/regolith-labs/drillx", branch = "master", optional = false }
futures = "0.3.30"
num_cpus = "1.16.0"
# ore = { package = "ore-program", git = "https://github.com/regolith-labs/ore", rev = "891565dff603891e540603d8399c233071f036af" }
ore = { package = "ore-program", git = "https://github.com/regolith-labs/ore", branch = "hardhat/v2" }
rand = "0.8.4"
rodio = "0.18.1"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] }
tokio = "1.35.1"
