[package]
name = "more-cli"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for ORE cryptocurrency mining. Tailored by Miraland Labs."
documentation = "https://ore.supply"
homepage = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore-cli"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[[bin]]
name = "ore"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
drillx = "2.0.0"
# drillx = { git = "https://github.com/regolith-labs/drillx", branch = "master", features = ["solana"] }
futures = "0.3.30"
num_cpus = "1.16.0"
ore-api = "2.1.0"
ore-utils = "2.1.0"
# ore = { package = "ore-program", git = "https://github.com/regolith-labs/ore", rev = "891565dff603891e540603d8399c233071f036af" }
# ore = { package = "ore-program", git = "https://github.com/regolith-labs/ore", branch = "hardhat/v2" }
# ore-api = { git = "https://github.com/regolith-labs/ore", rev = "ce9a701" }
# ore-utils = { git = "https://github.com/regolith-labs/ore", rev = "ce9a701" }
rand = "0.8.4"
rodio = "0.18.1"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
tokio = "1.35.1"

# [patch.crates-io]
# drillx = { path = "../drillx/drillx" }
# ore-api = { path = "../ore/api" }
# ore-utils = { path = "../ore/utils" }

